--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ flask-marshmallow==0.14.0
 Flask-Migrate==2.7.0
 Flask-RESTful==0.3.8
 Flask-SQLAlchemy==2.4.4
+gunicorn==20.0.4
 itsdangerous==1.1.0
 Jinja2==2.11.3
 kiwisolver==1.3.1
